[tool.poetry]
name = "arclia-stats"
version = "0.1.0"
description = "Basic statistical functions"
authors = ["Brian Lauber"]
license = "MIT"
readme = "README.md"

packages = [{include = "arclia/stats"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
